[package]
name = "postage"
version = "0.2.2"
description = "An async channel library"
keywords = ["async", "channels"]
categories = ["asynchronous"]
authors = ["Austin Jones <implAustin@gmail.com>"]
edition = "2018"
homepage = "https://github.com/austinjones/postage-rs"
repository = "https://github.com/austinjones/postage-rs"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1"
crossbeam-queue = "0.3"
atomic = "0.5"
# todo: remove this when complete: https://github.com/austinjones/postage-rs/issues/4
futures-task = "0.3"
static_assertions = "1.1.0"
thiserror = "1.0"
log = { version = "0.4", optional = true }
simple_logger = { version = "1.11.0", optional = true }

[dev-dependencies]
futures-test = "0.3"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
async-std = { version = "1.8", features = ["attributes"] }

[features]
default = ["logging"]
# enables combinators that log their messages
logging = ["log"]
# enables debug log statements.  disabled by default in production builds as they are *very verbose*
debug = ["log", "simple_logger"]

# [[example]]
# name = "tokio"

# [[example]]
# name = "async-std"